--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -2,26 +2,34 @@
 FROM erlang:21-slim AS builder
 
 ARG BONDY_REPO=https://gitlab.com/leapsight/bondy.git
-ARG BONDY_TAG=0.8.4
+ARG BONDY_TAG=0.8.5
 ARG BONDY_PROFILE=prod
+
+# WORKDIR /bondy-build
+
+# Download and install Rebar3
+# RUN mkdir -p /bondy-build/rebar3/bin
+# ADD https://s3.amazonaws.com/rebar3/rebar3 /bondy-build/rebar3/bin/rebar3
+# RUN chmod a+x /bondy-build/rebar3/bin/rebar3
+# ENV PATH=/bondy-build/rebar3/bin:$PATH
 
 WORKDIR /bondy-build
 
-# Install Rebar3
-RUN mkdir -p /bondy-build/rebar3/bin
-ADD https://s3.amazonaws.com/rebar3/rebar3 /bondy-build/rebar3/bin/rebar3
-RUN chmod a+x /bondy-build/rebar3/bin/rebar3
-ENV PATH=/bondy-build/rebar3/bin:$PATH
-
-
-# Install build deps and download bondy source
-
+# Install build deps
 RUN apt-get update && \
-    apt-get -y install build-essential git libssl-dev && \
-    git clone --branch $BONDY_TAG  --single-branch --depth 1 $BONDY_REPO
+    apt-get -y install build-essential git libssl-dev curl
 
-# Build Bondy release
-RUN mkdir -p /bondy-build/bondy
+# Download and install build deps and rebar
+RUN set -xe \
+    && curl -fSL -o rebar3 "https://s3.amazonaws.com/rebar3-nightly/rebar3" \
+    && chmod +x ./rebar3 \
+    && ./rebar3 local install \
+    && rm ./rebar3
+ENV PATH "$PATH:/root/.cache/rebar3/bin"
+
+# Download Bondy source and build release
+RUN mkdir -p /bondy-build/bondy && \
+    git clone --branch $BONDY_TAG  --single-branch --depth 1 $BONDY_REPO
 WORKDIR /bondy-build/bondy
 RUN rebar3 as $BONDY_PROFILE release
 
@@ -29,13 +37,11 @@ RUN rebar3 as $BONDY_PROFILE release
 
 FROM debian:stretch-slim
 
-
 ENV BONDY_HOME="/bondy"
-ARG BONDY_CONFIG="$BONDY_HOME/etc/bondy.conf"
 ENV USERNAME=bondy
 ENV GROUPNAME=$USERNAME
 ENV RELEASE_DIR="/bondy-build/bondy/_build/prod/rel/bondy"
-ENV PATH="$BONDY_HOME/bin:$PATH"
+
 ENV BONDY_LOG_CONSOLE=console
 ENV BONDY_LOG_LEVEL=info
 ENV RELX_REPLACE_OS_VARS=true
@@ -51,12 +57,12 @@ RUN apt-get update && \
 
 WORKDIR $BONDY_HOME
 
-# Install the released application
+
+# Install the application and the start.sh script
 # COPY --chown=10000:10000 files/vm.args /bondy/etc/vm.args
 COPY --chown=10000:10000 --from=builder $RELEASE_DIR $BONDY_HOME
-
-RUN echo "Configuring nodename" && \
-    sed "s/^nodename = bondy@127.0.0.1/nodename = bondy@$(hostname -f)/" $BONDY_CONFIG
+COPY --chown=10000:10000 start.sh /usr/sbin/start_bondy
+ENV PATH="$BONDY_HOME/bin:$PATH"
 
 # Ports
 # 4369  EPMD - Erlang Port Mapper Daemon
@@ -68,6 +74,11 @@ RUN echo "Configuring nodename" && \
 # 18085 WAMP TLS
 # 18086 CLUSTER PEER SERVICE
 EXPOSE 18080 18081 18082 18083 18084 18085 18086
+
 VOLUME ["/bondy/data"]
+
+HEALTHCHECK CMD bondy ping | grep -q pong
+
 USER $USERNAME
-CMD ["bondy", "foreground"]
+
+CMD ["start_bondy"]
