--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -53,7 +53,6 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/* && \
     addgroup --gid 10000 $GROUPNAME && \
     adduser --uid 10000 --ingroup $GROUPNAME --home $BONDY_HOME --disabled-password $USERNAME
-    # install --directory --owner $USERNAME --group $GROUPNAME $BONDY_HOME
 
 WORKDIR $BONDY_HOME
 
@@ -75,10 +74,10 @@ ENV PATH="$BONDY_HOME/bin:$PATH"
 # 18086 CLUSTER PEER SERVICE
 EXPOSE 18080 18081 18082 18083 18084 18085 18086
 
-VOLUME ["/bondy/data"]
+VOLUME ["/bondy/data", "/bondy/etc", "/bondy/tmp", "/bondy/log"]
 
 # HEALTHCHECK CMD bondy ping | grep -q pong
 
 USER $USERNAME
-
+# CMD ["bondy", "foreground"]
 CMD ["start_bondy"]
