--- a/Dockerfile.slim
+++ b/Dockerfile.slim
@@ -38,8 +38,6 @@ RUN rebar3 as $BONDY_PROFILE release
 FROM debian:stretch-slim
 
 ENV BONDY_HOME="/bondy"
-ENV USERNAME=bondy
-ENV GROUPNAME=$USERNAME
 ENV RELEASE_DIR="/bondy-build/bondy/_build/prod/rel/bondy"
 
 ENV BONDY_LOG_CONSOLE=console
@@ -48,19 +46,19 @@ ENV RELX_REPLACE_OS_VARS=true
 ENV ERL_CRASH_DUMP=/dev/null
 ENV KUBERNETES_LABEL_SELECTOR="app=bondy"
 
-RUN apt-get update && \
-    apt-get -y install openssl iproute2 curl jq && \
-    rm -rf /var/lib/apt/lists/* && \
-    addgroup --gid 10000 $GROUPNAME && \
-    adduser --uid 10000 --ingroup $GROUPNAME --home $BONDY_HOME --disabled-password $USERNAME
+RUN apt-get update \
+    && apt-get -y install openssl iproute2 curl jq \
+    && rm -rf /var/lib/apt/lists/* \
+    && groupadd -g 1000 -r bondy \
+    && useradd -u 1000 -r -g bondy -d $BONDY_HOME -s /bin/bash -c "Bondy user" bondy
 
 WORKDIR $BONDY_HOME
 
 
 # Install the application and the start.sh script
-# COPY --chown=10000:10000 files/vm.args /bondy/etc/vm.args
-COPY --chown=10000:10000 --from=builder $RELEASE_DIR $BONDY_HOME
-COPY --chown=10000:10000 start.sh /usr/sbin/start_bondy
+# COPY --chown=1000:1000 files/vm.args /bondy/etc/vm.args
+COPY --chown=bondy:bondy --from=builder $RELEASE_DIR $BONDY_HOME
+COPY --chown=bondy:bondy start.sh $BONDY_HOME/bin/start_bondy
 ENV PATH="$BONDY_HOME/bin:$PATH"
 
 # Ports
@@ -74,10 +72,8 @@ ENV PATH="$BONDY_HOME/bin:$PATH"
 # 18086 CLUSTER PEER SERVICE
 EXPOSE 18080 18081 18082 18083 18084 18085 18086
 
+USER bondy
 VOLUME ["/bondy/data", "/bondy/etc", "/bondy/tmp", "/bondy/log"]
-
-# HEALTHCHECK CMD bondy ping | grep -q pong
-
-USER $USERNAME
+WORKDIR $BONDY_HOME
 # CMD ["bondy", "foreground"]
 CMD ["start_bondy"]
